--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:8080",
+      "ws": true
+    }
+  },
   "devDependencies": {
     "axios": "^0.16.2",
     "lodash": "^4.17.4",
