--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bulma": "^0.5.0",
     "classnames": "^2.2.5",
     "dns": "^0.2.2",
+    "github-markdown-css": "^2.8.0",
     "jwt-decode": "^2.2.0",
+    "marked": "^0.3.6",
     "node-sass-chokidar": "^0.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
